tests/typechecker/should_fail/duplicated_definitions_channel.csp
channel c : {0..1}

channel c : {0..1}

